--- a/package.json
+++ b/package.json
@@ -1,8 +1,33 @@
 {
   "name": "browzection2",
   "description": "HTML class wrote at confirm from User Agent",
-  "main": "",
+  "main": "browzection.js",
   "scripts": {
+    "clean": "gulp clean",
+    "b:copy": "gulp copy",
+    "serve": "browser-sync start --config bs-config.js"
+  },
+  "config": {
+    "dest": {
+      "demo": "demo",
+      "output": "dist"
+    },
+    "wildcard": "/**",
+    "colors": {
+      "_reset": "\u001b[0m",
+      "black": "\u001b[30m",
+      "white": "\u001b[37m",
+      "red": "\u001b[31m",
+      "green": "\u001b[32m",
+      "yellow": "\u001b[33m",
+      "blue": "\u001b[34m"
+    },
+    "workspace": {
+      "root": "_ws",
+      "html": "pug",
+      "css": "stylus",
+      "js": "babel"
+    }
   },
   "repository": {
     "type": "git",
@@ -19,5 +44,32 @@
   "bugs": {
     "url": "https://github.com/artprojectteam/browzection2/issues"
   },
-  "homepage": "https://github.com/artprojectteam/browzection2#readme"
+  "homepage": "https://github.com/artprojectteam/browzection2#readme",
+  "devDependencies": {
+    "babel-eslint": "^7.1.0",
+    "babel-plugin-transform-es2015-classes": "^6.18.0",
+    "babel-preset-es2015-without-strict": "0.0.4",
+    "babel-preset-stage-1": "^6.16.0",
+    "babelify": "^7.3.0",
+    "browserify": "^13.1.1",
+    "browserify-shim": "^3.8.12",
+    "coffee-script": "^1.11.1",
+    "debowerify": "^1.5.0",
+    "del": "^2.2.2",
+    "eslint": "^3.9.1",
+    "gulp": "^3.9.1",
+    "gulp-babel": "^6.1.2",
+    "gulp-changed": "^1.3.2",
+    "gulp-copy": "0.0.2",
+    "gulp-load-plugins": "^1.4.0",
+    "gulp-plumber": "^1.1.0",
+    "gulp-rename": "^1.2.2",
+    "gulp-strip-debug": "^1.1.0",
+    "gulp-uglify": "^2.0.0",
+    "gulp-watch": "^4.3.10",
+    "node-notifier": "^4.6.1",
+    "require-dir": "^0.3.1",
+    "rimraf": "^2.5.4",
+    "watchify": "^3.7.0"
+  }
 }
