--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "babel:w": "gulp babel --watch",
     "babel:p": "gulp babel --production",
     "pug": "gulp pug",
+    "stylus": "gulp stylus",
     "serve": "browser-sync start --config bs-config.js"
   },
   "config": {
@@ -73,16 +74,20 @@
     "gulp-babel": "^6.1.2",
     "gulp-changed": "^1.3.2",
     "gulp-copy": "0.0.2",
+    "gulp-filenames": "^4.0.1",
     "gulp-if": "^2.0.1",
     "gulp-load-plugins": "^1.4.0",
+    "gulp-pleeease": "^2.0.2",
     "gulp-plumber": "^1.1.0",
     "gulp-pug": "^3.1.0",
     "gulp-rename": "^1.2.2",
     "gulp-strip-debug": "^1.1.0",
+    "gulp-stylus": "^2.5.0",
     "gulp-uglify": "^2.0.0",
     "gulp-watch": "^4.3.10",
     "minimist": "^1.2.0",
     "node-notifier": "^4.6.1",
+    "normalize-css": "^2.3.1",
     "require-dir": "^0.3.1",
     "rimraf": "^2.5.4",
     "vinyl-buffer": "^1.0.0",
