でもページ作成

--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "main": "browzection.js",
   "scripts": {
     "start": "npm-run-all -p babel:w _def",
-    "build": "npm-run-all -s clean -p copy babel pug stylus",
-    "release": "npm-run-all -s clean -p copy babel:p pug stylus",
+    "build": "npm-run-all -s clean -p copy babel pug stylus demo_js",
+    "release": "npm-run-all -s clean -p copy babel:p pug stylus demo_js",
     "_def": "gulp default",
     "clean": "gulp clean",
     "copy": "gulp copy",
+    "demo_js": "gulp demo_js",
     "babel": "gulp babel",
     "babel:w": "gulp babel --watch",
     "babel:p": "gulp babel --production",
