アウトプット先を変更

--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   "config": {
     "dest": {
       "demo": "demo",
-      "output": "dist"
+      "output": ""
     },
     "wildcard": "/**",
     "colors": {
