--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "browzection2",
   "description": "HTML class wrote at confirm from User Agent",
-  "main": "es6/browzection2.js",
-  "version": "1.3.0",
+  "main": "dist/browzection2.js",
+  "version": "1.3.1",
   "scripts": {
     "start": "npm-run-all -p babel:w _def",
     "build": "npm-run-all -s clean -p copy babel pug stylus demo_js",
